// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerOptions > matches the snapshot 1`] = `
"<div class="playerOptions">
  <p class="time">00:05 / 00:10</p>
  <div class="volumeControl"><button class="iconButton" type="button" title="Mute">
      <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="text visually-hidden">Mute</span>
    </button>
    <div>
      <div class="sliderWrapper volumeInput volumeInput" aria-label="Volume" aria-valuetext="1 of 1">
        <div class="slider">
          <div class="progressWrapper">
            <div class="process" style="width: 0px;"></div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <p class="visually-hidden"> Volume at 100% </p>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if--><button class="iconButton" type="button" title="Queue">
    <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text visually-hidden"> Queue </span>
  </button>
  <teleport-stub to="#teleports">
    <transition-stub name="slide-up-down" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
</div>"
`;

exports[`PlayerOptions > when isPodcast and isTrack are false > matches the snapshot 1`] = `
"<div class="playerOptions">
  <!--v-if-->
  <div class="volumeControl"><button class="iconButton" type="button" title="Mute">
      <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="text visually-hidden">Mute</span>
    </button>
    <div>
      <div class="sliderWrapper volumeInput volumeInput" aria-label="Volume" aria-valuetext="1 of 1">
        <div class="slider">
          <div class="progressWrapper">
            <div class="process" style="width: 0px;"></div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <p class="visually-hidden"> Volume at 100% </p>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if--><button class="iconButton" type="button" title="Queue">
    <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text visually-hidden"> Queue </span>
  </button>
  <teleport-stub to="#teleports">
    <transition-stub name="slide-up-down" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
</div>"
`;

exports[`PlayerOptions > when isPodcast is true > matches the snapshot 1`] = `
"<div class="playerOptions">
  <!--v-if-->
  <div class="volumeControl"><button class="iconButton" type="button" title="Mute">
      <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="text visually-hidden">Mute</span>
    </button>
    <div>
      <div class="sliderWrapper volumeInput volumeInput" aria-label="Volume" aria-valuetext="1 of 1">
        <div class="slider">
          <div class="progressWrapper">
            <div class="process" style="width: 0px;"></div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <p class="visually-hidden"> Volume at 100% </p>
    </div>
  </div>
  <div class="dropdown"><button class="iconButton alignRight button button" type="button" title="Playback speed">
      <phgear class="icon" aria-hidden="true" size="24" weight="duotone"></phgear><span class="text visually-hidden">More</span>
    </button>
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div><button class="iconButton" type="button" title="Episode information">
    <phinfo class="icon" aria-hidden="true" size="24" weight="duotone"></phinfo><span class="text visually-hidden"> Episode information </span>
  </button>
  <!--v-if--><button class="iconButton" type="button" title="Queue">
    <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text visually-hidden"> Queue </span>
  </button>
  <teleport-stub to="#teleports">
    <transition-stub name="slide-up-down" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
</div>"
`;

exports[`PlayerOptions > when isRadioStation is true > matches the snapshot 1`] = `
"<div class="playerOptions">
  <!--v-if-->
  <div class="volumeControl"><button class="iconButton" type="button" title="Mute">
      <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="text visually-hidden">Mute</span>
    </button>
    <div>
      <div class="sliderWrapper volumeInput volumeInput" aria-label="Volume" aria-valuetext="1 of 1">
        <div class="slider">
          <div class="progressWrapper">
            <div class="process" style="width: 0px;"></div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <p class="visually-hidden"> Volume at 100% </p>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if--><button class="iconButton" type="button" title="Queue">
    <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text visually-hidden"> Queue </span>
  </button>
  <teleport-stub to="#teleports">
    <transition-stub name="slide-up-down" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
</div>"
`;

exports[`PlayerOptions > when isTrack is true > matches the snapshot 1`] = `
"<div class="playerOptions">
  <!--v-if-->
  <div class="volumeControl"><button class="iconButton" type="button" title="Mute">
      <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="text visually-hidden">Mute</span>
    </button>
    <div>
      <div class="sliderWrapper volumeInput volumeInput" aria-label="Volume" aria-valuetext="1 of 1">
        <div class="slider">
          <div class="progressWrapper">
            <div class="process" style="width: 0px;"></div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <p class="visually-hidden"> Volume at 100% </p>
    </div>
  </div>
  <div class="dropdown"><button class="iconButton alignRight button button" type="button" title="Playback speed">
      <phgear class="icon" aria-hidden="true" size="24" weight="duotone"></phgear><span class="text visually-hidden">More</span>
    </button>
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div><button class="iconButton" type="button" title="Episode information">
    <phinfo class="icon" aria-hidden="true" size="24" weight="duotone"></phinfo><span class="text visually-hidden"> Episode information </span>
  </button><button class="iconButton" type="button" title="Like track">
    <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="text visually-hidden">Like track</span>
  </button><button class="iconButton" type="button" title="Queue">
    <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text visually-hidden"> Queue </span>
  </button>
  <teleport-stub to="#teleports">
    <transition-stub name="slide-up-down" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
</div>"
`;
